--- a/sass/_index-styles.sass
+++ b/sass/_index-styles.sass
@@ -292,9 +292,14 @@ body
                 border-bottom-left-radius: 10px
                 width: 100%
                 margin: 0
-      
+    
+    .hand-container
+      overflow-x: hidden
+                
     .hand
       position: relative
+      margin-left: -15px
+      margin-right: -15px
       
       .phone
         height: 209px
